# FacturacionCalculator

./: .gitignore  Login.py  README.md  adder.py  app.py  app.spec  descomprimir.py  getCredentials.py  multiprocessing_login.py  pyproject.toml  script.py  script2.py  spreadsheetWriter.py
config/: credencial.json.example
src/: Login.py  adder.py  app.py  descomprimir.py  getCredentials.py  multiprocessing_login.py  routesResolver.py  spreadsheetWriter.py
