[tool.poetry]
name = "mamá"
version = "0.1.0"
description = ""
authors = ["María Josefina Martinez <josemartinezosti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
pandas = "^2.2.2"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
