[tool.poetry]
name = "FacturacionCalculator"
version = "0.1.0"
description = ""
authors = ["María Josefina Martinez <josemartinezosti@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
pandas = "^2.2.2"
tk = "^0.1.0"
selenium = "^4.25.0"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
