[tool.poetry]
name = "FacturacionCalculator"
version = "0.1.0"
description = ""
authors = ["María Josefina Martinez <josemartinezosti@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
gspread = "^6.1.2"
oauth2client = "^4.1.3"
pandas = "^2.2.2"
tk = "^0.1.0"
selenium = "^4.25.0"
nuitka = "^2.6.2"
psutil = "^6.1.1"
webdriver-manager = "^4.0.2"
certifi = "^2025.4.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
